Fix more FindBugs errors and unused imports in swank.canvas classes